--- a/package.json
+++ b/package.json
@@ -14,29 +14,20 @@
     "cache-bust": "echo 'Busting Vercel Cache'"
   },
   "dependencies": {
-    "@capacitor/cli": "^8.0.1",
     "@capacitor/core": "^8.0.1",
-    "@capacitor/ios": "^8.0.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.18",
     "@types/three": "^0.182.0",
-    "astronomy-engine": "^2.1.19",
-    "autoprefixer": "^10.4.23",
-    "clsx": "^2.1.1",
     "framer-motion": "^12.27.1",
     "gsap": "^3.14.2",
     "i18next": "^25.7.4",
-    "i18next-browser-languagedetector": "^8.2.0",
-    "lamina": "^1.2.2",
     "lucide-react": "^0.563.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.3",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18",
     "three": "^0.182.0",
     "three-stdlib": "^2.36.1"
   },
@@ -46,12 +37,14 @@
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
+    "depcheck": "^1.4.7",
+    "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.0.0",
+    "unimported": "^1.31.0",
     "vite": "^5.0.0"
   }
 }
