--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "typescript": "^5.3.0",
     "typescript-eslint": "^8.0.0",
     "unimported": "^1.31.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
