--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typescript-eslint": "^8.0.0",
     "unimported": "^1.31.0",
     "vite": "^5.0.0",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
